<?xml version="1.0" encoding="utf-8"?>

<!--25 April 2022-->
<!--10119197-->
<!--Mochamad Nurkhayal Kadafi-->
<!--IF-5-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen120"
        android:layout_marginLeft="@dimen/dimen24"
        android:layout_marginRight="@dimen/dimen24">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_company"
            android:src="@drawable/ic_welcome_logo" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen30"
            style="@style/editText1"
            android:hint="@string/plcUsername" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen10"
            style="@style/editText1"
            android:hint="@string/plcPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen15"
            style="@style/btnMain1"
            android:text="@string/login"
            />

        <TextView
            android:id="@+id/tvOR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen15"
            android:gravity="center"
            style="@style/textStyle1"
            android:text="OR"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen15"
            android:drawableLeft="@drawable/ic_welcome_fb_login"
            style="@style/btnFacebook"
            android:text="@string/btnFacebook" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen20"
            android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infoRegister"
            style="@style/textStyle1" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen8"
            android:clickable="true"
            style="@style/textStyle1"
            android:text="@string/register"
            android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>