<?xml version="1.0" encoding="utf-8"?>

<!--25 April 2022-->
<!--10119197-->
<!--Mochamad Nurkhayal Kadafi-->
<!--IF-5-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".VerifityAccountActivity">

    <TextView
        android:id="@+id/tvVerifyYourAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen200"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="@dimen/dimen38"
        android:text="@string/verifyAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen15"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen16"
        android:textAlignment="center"
        android:text="@string/description_verify_2"
        app:layout_constraintStart_toStartOf="@id/tvVerifyYourAccount"
        app:layout_constraintEnd_toEndOf="@id/tvVerifyYourAccount"
        app:layout_constraintTop_toBottomOf="@id/tvVerifyYourAccount"
        />

    <EditText
        android:id="@+id/etVerificationCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen60"
        android:layout_marginRight="@dimen/dimen30"
        android:layout_marginLeft="@dimen/dimen30"
        style="@style/editText1"
        android:textAlignment="center"
        android:hint="@string/plcVerificationCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSendCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen20"
        android:layout_marginRight="@dimen/dimen30"
        android:layout_marginLeft="@dimen/dimen30"
        style="@style/btnMain1"
        android:text="@string/send_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etVerificationCode" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen20"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/tvVerifyYourAccount"
        app:layout_constraintEnd_toEndOf="@id/tvVerifyYourAccount"
        app:layout_constraintTop_toBottomOf="@id/btnSendCode">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infoCodeVerify"
            style="@style/textStyle1" />

        <TextView
            android:id="@+id/tvResend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen8"
            style="@style/textStyle1"
            android:text="@string/resend"
            android:textStyle="bold"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>